# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  README.md
asset/: PIPES_2A.xpm  TILE_1E.xpm  TILE_1F.xpm
asset/hud/: death_screen.xpm
asset/hud/assault_rifle_animation/: assault_rifle_1.xpm  assault_rifle_4.xpm
asset/hud/knife_animation/: knife_1.xpm  knife_3.xpm  knife_4.xpm  knife_6.xpm
asset/hud/pistol_animation/: pistol_1.xpm  pistol_2.xpm  pistol_3.xpm  pistol_5.xpm  pistol_6.xpm  pistol_7.xpm
asset/map/: map.cub
asset/texture/: BRICK_1A.xpm  BRICK_2B.xpm  BRICK_3C.xpm  BRICK_4B.xpm  BRICK_4E.xpm  CONCRETE_1A.xpm  CONCRETE_2C.xpm  CONSOLE_1B.xpm  CONSOLE_1C.xpm  CONSOLE_1D.xpm  CRATE_1A.xpm  CRATE_1B.xpm  CRATE_1D.xpm  CRATE_1F.xpm  CRATE_1G.xpm  CRATE_1H.xpm  CRATE_1M.xpm  CRATE_2C.xpm  CRATE_2D.xpm  CRATE_2E.xpm  CRATE_2H.xpm  CRATE_2J.xpm  CRATE_2L.xpm  DIRT_1B.xpm  DOORTRIM_1A.xpm  DOORTRIM_1C.xpm  DOOR_1A.xpm  DOOR_1C.xpm  DOOR_1D.xpm  DOOR_1E.xpm  DOOR_2A.xpm  DOOR_2B.xpm  DOOR_2C.xpm  DOOR_2E.xpm  DOOR_3A.xpm  DOOR_4A.xpm  FLOOR_1A.xpm  FLOOR_1B.xpm  FLOOR_1D.xpm  FLOOR_2B.xpm  (+75 more)
cub3D/: Makefile
cub3D/include/: cub.h  draw.h  hook.h  map.h  player.h  raycasting.h  vector.h
cub3D/src/display/: render_frame.c
cub3D/src/display/draw_shape/: draw_background.c  draw_player_view.c  draw_wall.c  mlx_put_pixel.c
cub3D/src/display/minimap/: minimap.c
cub3D/src/display/player/: player_movement.c  position_utils.c
cub3D/src/display/raycasting/: raycasting.c
cub3D/src/display/vector/: fvector.c
cub3D/src/mlx_handler/destroy/: mlx_data_destroy.c  wall_sprite_destroy.c
cub3D/src/mlx_handler/hook/: cub_exit.c  key_release.c
cub3D/src/mlx_handler/initialization/: mlx_data_init.c  wall_sprite_init.c
cub3D/src/parser/map_checker/: get_spawn.c  map_checker.c
cub3D/src/parser/parse_map/: parse_map.c
cub3D/src/parser/parse_map_data/: parse_map_data.c  parse_wall.c
cub3D_bonus/: Makefile  cub3D
cub3D_bonus/asset/: ammo.xpm  assault_riffle.xpm  bullet.xpm  pistol.xpm  soldier.xpm  test.xpm
cub3D_bonus/asset/collectible/: ammo.xpm  medic_kit.xpm
cub3D_bonus/asset/hud/: .death_screen.xpm.swp  assault_rifle_hud.xpm  death_screen.xpm  knife_hud.xpm  pistol_hud.xpm
cub3D_bonus/asset/hud/assault_rifle_animation/: assault_rifle_0.xpm  assault_rifle_2.xpm  assault_rifle_3.xpm
cub3D_bonus/asset/hud/knife_animation/: knife_0.xpm  knife_2.xpm  knife_5.xpm
cub3D_bonus/asset/hud/pistol_animation/: pistol_0.xpm  pistol_4.xpm
cub3D_bonus/asset/texture/: BRICK_1B.xpm  BRICK_2A.xpm  BRICK_3A.xpm  BRICK_3B.xpm  BRICK_3D.xpm  BRICK_3E.xpm  BRICK_4A.xpm  BRICK_4C.xpm  BRICK_4D.xpm  CONCRETE_1B.xpm  CONCRETE_2A.xpm  CONCRETE_2B.xpm  CONCRETE_3A.xpm  CONCRETE_3B.xpm  CONCRETE_3C.xpm  CONSOLE_1A.xpm  CRATE_1C.xpm  CRATE_1E.xpm  CRATE_1I.xpm  CRATE_1J.xpm  CRATE_1K.xpm  CRATE_1L.xpm  CRATE_1N.xpm  CRATE_2A.xpm  CRATE_2B.xpm  CRATE_2F.xpm  CRATE_2G.xpm  CRATE_2I.xpm  CRATE_2K.xpm  CRATE_2M.xpm  CRATE_2N.xpm  DIRT_1A.xpm  DIRT_1C.xpm  DOORTRIM_1B.xpm  DOOR_1B.xpm  DOOR_1F.xpm  DOOR_2D.xpm  DOOR_2F.xpm  DOOR_3B.xpm  DOOR_4B.xpm  (+77 more)
cub3D_bonus/include/: collectible.h  connection_routine.h  cub.h  cub_socket.h  define.h  draw.h  error.h  event.h  hook.h  hud.h  map.h  map_client.h  map_server.h  mlx_handler.h  mlx_key.h  parser_client.h  parser_server.h  player.h  player_data.h  players_data.h  raycasting.h  server_data.h  socket_client.h  socket_server.h  texture.h  weapons_data.h
cub3D_bonus/src/client/: client.c
cub3D_bonus/src/server/: server.c  server_exit.c
cub3D_bonus/src/utils/: collectible.c  mutex_init.c  time.c
include/: cub.h  draw.h  error.h  hook.h  map.h  map_bonus.h  mlx_handler.h  parser.h  parser_bonus.h  parser_client.h  player.h  raycasting.h  server_data.h  socket_bonus.h  socket_client.h  socket_server.h  vector.h
lib/libft/: Makefile
lib/libft/include/: libft.h
lib/libft/srcs/char/: ft_isalnum.c  (+2 more)
libft/: Makefile
libft/include/: get_next_line.h  libft.h
libft/srcs/char/: ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_issign.c  ft_isspace.c  ft_toupper.c
libft/srcs/fd/: ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/srcs/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_lstrev.c
libft/srcs/memory/: free_string_array.c  ft_memmove.c  ft_memset.c
libft/srcs/stdout/: ft_putnbr.c  ft_putstr.c
libft/srcs/string/: free_string_array.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
map/: big_map.cub  map.cub  map_bonus.cub  map_multi.cub  mini_map.cub  pylone.cub
map/texture/: test1.xpm  wall_texture2.xpm
minilibx/linux/: Makefile.gen
minilibx/linux/test/: Makefile.gen  mlx-test
minilibx/test/: mlx-test
src/: error.c  main.c
src/bonus/: server.c
src/bonus/parser/: parser.c
src/bonus/server/: server.c
src/client/parser/: map_clear.c
src/client/player/: player_hit_collectible.c  player_shoot.c  player_shoot_utils.c
src/display/: render_frame.c  set_pos.c
src/display/draw_shape/: draw_background.c  draw_player_view.c  draw_rectangle.c  draw_wall.c  mlx_put_pixel.c
src/display/fps_counter/: fps_counter.c
src/display/minimap/: minimap.c
src/display/player/: init_player_pos.c  movement.c  player_movement.c  player_pos_init.c
src/display/raycasting/: raycasting.c
src/display/vector/: fvector.c  matrix.c  vector.c
src/mlx_handler/destroy/: mlx_data_destroy.c  wall_sprite_destroy.c
src/mlx_handler/hook/: cub_exit.c  init_hook.c  key_press.c  key_release.c
src/mlx_handler/initialization/: mlx_data_init.c  wall_sprite_init.c
src/parser/: parser.c  parser_utils.c
src/parser/map_checker/: get_spawn.c  map_checker.c
src/parser/parse_map/: parse_map.c  parse_map_utils.c
src/parser/parse_map_data/: parse_horizontal_plane.c  parse_map_data.c  parse_wall.c
src/parsing/: parse_horizontal_plane.c  parse_map.c  parse_map_data.c  parse_wall.c  parser.c  parsing.c
src/server/: server.c
src/server/socket/: check_server_error.c  socket_init.c
src/utils/socket/: port_get.c
(+167 files in other folders)
