cmake_minimum_required(VERSION 3.24)
project(42_Cub3D C)

set(CMAKE_C_STANDARD 11)

include_directories(libft/include)
include_directories(include)
include_directories(minilibx)

add_executable(42_Cub3D
        libft/include/get_next_line.h
        libft/include/libft.h
        libft/srcs/char/ft_isalnum.c
        libft/srcs/char/ft_isalpha.c
        libft/srcs/char/ft_isascii.c
        libft/srcs/char/ft_isdigit.c
        libft/srcs/char/ft_isprint.c
        libft/srcs/char/ft_issign.c
        libft/srcs/char/ft_isspace.c
        libft/srcs/char/ft_tolower.c
        libft/srcs/char/ft_toupper.c
        libft/srcs/convert/ft_atoi.c
        libft/srcs/convert/ft_atoll.c
        libft/srcs/convert/ft_itoa.c
        libft/srcs/fd/ft_putchar_fd.c
        libft/srcs/fd/ft_putendl_fd.c
        libft/srcs/fd/ft_putnbr_fd.c
        libft/srcs/fd/ft_putstr_fd.c
        libft/srcs/get_next_line/get_next_line.c
        libft/srcs/get_next_line/get_next_line_utils.c
        libft/srcs/list/ft_lstadd_back.c
        libft/srcs/list/ft_lstadd_front.c
        libft/srcs/list/ft_lstclear.c
        libft/srcs/list/ft_lstdelone.c
        libft/srcs/list/ft_lstiter.c
        libft/srcs/list/ft_lstlast.c
        libft/srcs/list/ft_lstmap.c
        libft/srcs/list/ft_lstnew.c
        libft/srcs/list/ft_lstsize.c
        libft/srcs/memory/free_string_array.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_calloc.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/stdout/ft_putchar.c
        libft/srcs/stdout/ft_putendl.c
        libft/srcs/stdout/ft_putnbr.c
        libft/srcs/stdout/ft_putstr.c
        libft/srcs/string/ft_split.c
        libft/srcs/string/ft_strchr.c
        libft/srcs/string/ft_strcmp.c
        libft/srcs/string/ft_strcpy.c
        libft/srcs/string/ft_strdup.c
        libft/srcs/string/ft_striteri.c
        libft/srcs/string/ft_strjoin.c
        libft/srcs/string/ft_strlcat.c
        libft/srcs/string/ft_strlcpy.c
        libft/srcs/string/ft_strlen.c
        libft/srcs/string/ft_strmapi.c
        libft/srcs/string/ft_strncmp.c
        libft/srcs/string/ft_strncpy.c
        libft/srcs/string/ft_strnstr.c
        libft/srcs/string/ft_strrchr.c
        libft/srcs/string/ft_strtrim.c
        libft/srcs/string/ft_substr.c
        minilibx/mlx.h
        minilibx/mlx_clear_window.c
        minilibx/mlx_destroy_display.c
        minilibx/mlx_destroy_image.c
        minilibx/mlx_destroy_window.c
        minilibx/mlx_expose_hook.c
        minilibx/mlx_ext_randr.c
        minilibx/mlx_flush_event.c
        minilibx/mlx_get_color_value.c
        minilibx/mlx_get_data_addr.c
        minilibx/mlx_hook.c
        minilibx/mlx_init.c
        minilibx/mlx_int.h
        minilibx/mlx_int_anti_resize_win.c
        minilibx/mlx_int_do_nothing.c
        minilibx/mlx_int_get_visual.c
        minilibx/mlx_int_param_event.c
        minilibx/mlx_int_set_win_event_mask.c
        minilibx/mlx_int_str_to_wordtab.c
        minilibx/mlx_int_wait_first_expose.c
        minilibx/mlx_key_hook.c
        minilibx/mlx_lib_xpm.c
        minilibx/mlx_loop.c
        minilibx/mlx_loop_hook.c
        minilibx/mlx_mouse.c
        minilibx/mlx_mouse_hook.c
        minilibx/mlx_new_image.c
        minilibx/mlx_new_window.c
        minilibx/mlx_pixel_put.c
        minilibx/mlx_put_image_to_window.c
        minilibx/mlx_rgb.c
        minilibx/mlx_screen_size.c
        minilibx/mlx_set_font.c
        minilibx/mlx_string_put.c
        minilibx/mlx_xpm.c
        src/parsing/parsing.c
        src/main.c include/map.h)
