cmake_minimum_required(VERSION 3.24.2)
project(cub3D C)

set(CMAKE_C_STANDARD 11)

include_directories(cub3D_bonus/include)
include_directories(libft/include)
include_directories(minilibx)

add_executable(cub3D
        cub3D_bonus/include/collectible.h
        cub3D_bonus/include/cub.h
        cub3D_bonus/include/cub_socket.h
        cub3D_bonus/include/define.h
        cub3D_bonus/include/draw.h
        cub3D_bonus/include/error.h
        cub3D_bonus/include/event.h
        cub3D_bonus/include/hook.h
        cub3D_bonus/include/hud.h
        cub3D_bonus/include/map_client.h
        cub3D_bonus/include/map_server.h
        cub3D_bonus/include/mlx_handler.h
        cub3D_bonus/include/mlx_key.h
        cub3D_bonus/include/parser_client.h
        cub3D_bonus/include/parser_server.h
        cub3D_bonus/include/player.h
        cub3D_bonus/include/player_data.h
        cub3D_bonus/include/players_data.h
        cub3D_bonus/include/raycasting.h
        cub3D_bonus/include/server_data.h
        cub3D_bonus/include/socket_client.h
        cub3D_bonus/include/socket_server.h
        cub3D_bonus/include/texture.h
        cub3D_bonus/include/vector.h
        cub3D_bonus/include/weapons_data.h
        cub3D_bonus/src/client/display/draw/hud/draw_ammo.c
        cub3D_bonus/src/client/display/draw/hud/draw_health_bar.c
        cub3D_bonus/src/client/display/draw/hud/draw_hud.c
        cub3D_bonus/src/client/display/draw/hud/draw_minimap.c
        cub3D_bonus/src/client/display/draw/hud/draw_minimap_pixel.c
        cub3D_bonus/src/client/display/draw/hud/draw_weapon.c
        cub3D_bonus/src/client/display/draw/hud/draw_weapon_view.c
        cub3D_bonus/src/client/display/draw/hud/pixel_transparency.c
        cub3D_bonus/src/client/display/draw/draw_background.c
        cub3D_bonus/src/client/display/draw/draw_collectible.c
        cub3D_bonus/src/client/display/draw/draw_enemy.c
        cub3D_bonus/src/client/display/draw/draw_player_view.c
        cub3D_bonus/src/client/display/draw/draw_rectangle.c
        cub3D_bonus/src/client/display/draw/draw_shape_utils.c
        cub3D_bonus/src/client/display/draw/draw_sprite.c
        cub3D_bonus/src/client/display/draw/draw_wall.c
        cub3D_bonus/src/client/display/draw/mlx_put_pixel.c
        cub3D_bonus/src/client/display/raycasting/raycasting.c
        cub3D_bonus/src/client/display/vector/fvector.c
        cub3D_bonus/src/client/display/vector/matrix.c
        cub3D_bonus/src/client/display/vector/vector.c
        cub3D_bonus/src/client/display/render_frame.c
        cub3D_bonus/src/client/event/add_event.c
        cub3D_bonus/src/client/event/event_new.c
        cub3D_bonus/src/client/mlx_handler/destroy/mlx_data_destroy.c
        cub3D_bonus/src/client/mlx_handler/destroy/mlx_sprite_destroy.c
        cub3D_bonus/src/client/mlx_handler/hook/cub_exit.c
        cub3D_bonus/src/client/mlx_handler/hook/init_hook.c
        cub3D_bonus/src/client/mlx_handler/hook/key_press.c
        cub3D_bonus/src/client/mlx_handler/hook/key_release.c
        cub3D_bonus/src/client/mlx_handler/initialization/mlx_animation_sprite_init.c
        cub3D_bonus/src/client/mlx_handler/initialization/mlx_data_init.c
        cub3D_bonus/src/client/mlx_handler/initialization/mlx_sprite_init.c
        cub3D_bonus/src/client/parser/collectible/collectible.c
        cub3D_bonus/src/client/parser/collectible/collectible_list.c
        cub3D_bonus/src/client/parser/collectible/collectible_parse.c
        cub3D_bonus/src/client/parser/file_parse.c
        cub3D_bonus/src/client/parser/map_clear.c
        cub3D_bonus/src/client/parser/map_parse.c
        cub3D_bonus/src/client/parser/parser.c
        cub3D_bonus/src/client/player/collectible_dist.c
        cub3D_bonus/src/client/player/player_door_interact.c
        cub3D_bonus/src/client/player/player_hit_collectible.c
        cub3D_bonus/src/client/player/player_movement.c
        cub3D_bonus/src/client/player/player_pos_init.c
        cub3D_bonus/src/client/player/player_shoot.c
        cub3D_bonus/src/client/player/position_utils.c
        cub3D_bonus/src/client/socket/socket_init.c
        cub3D_bonus/src/client/thread/destroy/player_data_destroy.c
        cub3D_bonus/src/client/thread/initialization/player_data_init.c
        cub3D_bonus/src/client/thread/initialization/thread_init.c
        cub3D_bonus/src/client/thread/routine/event_response.c
        cub3D_bonus/src/client/thread/routine/listening_response.c
        cub3D_bonus/src/client/thread/routine/routine.c
        cub3D_bonus/src/client/thread/routine/send_event.c
        cub3D_bonus/src/client/thread/routine/send_response.c
        cub3D_bonus/src/client/thread/routine/take_collectible.c
        cub3D_bonus/src/client/client.c
        cub3D_bonus/src/server/parser/map_checker/get_spawn.c
        cub3D_bonus/src/server/parser/map_checker/map_checker.c
        cub3D_bonus/src/server/parser/map_checker/map_error.c
        cub3D_bonus/src/server/parser/parse_map/parse_map.c
        cub3D_bonus/src/server/parser/parse_map/parse_map_utils.c
        cub3D_bonus/src/server/parser/parse_map_data/parse_map_data.c
        cub3D_bonus/src/server/parser/parse_map_data/parse_path.c
        cub3D_bonus/src/server/parser/parser.c
        cub3D_bonus/src/server/parser/parser_utils.c
        cub3D_bonus/src/server/socket/client_accept.c
        cub3D_bonus/src/server/socket/socket_init.c
        cub3D_bonus/src/server/thread/destroy/server_data_destroy.c
        cub3D_bonus/src/server/thread/initialization/enemies_init.c
        cub3D_bonus/src/server/thread/initialization/mutexes_init.c
        cub3D_bonus/src/server/thread/initialization/server_data_init.c
        cub3D_bonus/src/server/thread/initialization/thread_init.c
        cub3D_bonus/src/server/thread/routines/connection_routine/asset_send.c
        cub3D_bonus/src/server/thread/routines/connection_routine/client_delete.c
        cub3D_bonus/src/server/thread/routines/connection_routine/connection_error.c
        cub3D_bonus/src/server/thread/routines/connection_routine/connection_routine.c
        cub3D_bonus/src/server/thread/routines/connection_routine/file_send.c
        cub3D_bonus/src/server/thread/routines/connection_routine/map_send.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/disconnect_client.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/event_request.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/event_router.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/in_game_routine.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/listening_request.c
        cub3D_bonus/src/server/thread/routines/in_game_routine/send_request.c
        cub3D_bonus/src/server/server.c
        cub3D_bonus/src/utils/socket/port_get.c
        cub3D_bonus/src/utils/collectible.c
        cub3D_bonus/src/utils/time.c
        cub3D_bonus/src/error.c
        libft/include/get_next_line.h
        libft/include/libft.h
        libft/srcs/char/ft_isalnum.c
        libft/srcs/char/ft_isalpha.c
        libft/srcs/char/ft_isascii.c
        libft/srcs/char/ft_isdigit.c
        libft/srcs/char/ft_isprint.c
        libft/srcs/char/ft_issign.c
        libft/srcs/char/ft_isspace.c
        libft/srcs/char/ft_tolower.c
        libft/srcs/char/ft_toupper.c
        libft/srcs/convert/ft_atoi.c
        libft/srcs/convert/ft_atoll.c
        libft/srcs/convert/ft_itoa.c
        libft/srcs/convert/ft_stoa.c
        libft/srcs/fd/ft_putchar_fd.c
        libft/srcs/fd/ft_putendl_fd.c
        libft/srcs/fd/ft_putnbr_fd.c
        libft/srcs/fd/ft_putstr_fd.c
        libft/srcs/get_next_line/get_next_line.c
        libft/srcs/get_next_line/get_next_line_utils.c
        libft/srcs/list/ft_lstadd_back.c
        libft/srcs/list/ft_lstadd_front.c
        libft/srcs/list/ft_lstclear.c
        libft/srcs/list/ft_lstdelone.c
        libft/srcs/list/ft_lstiter.c
        libft/srcs/list/ft_lstlast.c
        libft/srcs/list/ft_lstmap.c
        libft/srcs/list/ft_lstnew.c
        libft/srcs/list/ft_lstrev.c
        libft/srcs/list/ft_lstsize.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_calloc.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/stdout/ft_putchar.c
        libft/srcs/stdout/ft_putendl.c
        libft/srcs/stdout/ft_putnbr.c
        libft/srcs/stdout/ft_putstr.c
        libft/srcs/string/free_string_array.c
        libft/srcs/string/ft_split.c
        libft/srcs/string/ft_strchr.c
        libft/srcs/string/ft_strcmp.c
        libft/srcs/string/ft_strcpy.c
        libft/srcs/string/ft_strdup.c
        libft/srcs/string/ft_striteri.c
        libft/srcs/string/ft_strjoin.c
        libft/srcs/string/ft_strlcat.c
        libft/srcs/string/ft_strlcpy.c
        libft/srcs/string/ft_strlen.c
        libft/srcs/string/ft_strmapi.c
        libft/srcs/string/ft_strncmp.c
        libft/srcs/string/ft_strncpy.c
        libft/srcs/string/ft_strnstr.c
        libft/srcs/string/ft_strrchr.c
        libft/srcs/string/ft_strtrim.c
        libft/srcs/string/ft_substr.c
        minilibx/test/main.c
        minilibx/test/new_win.c
        minilibx/mlx.h
        minilibx/mlx_clear_window.c
        minilibx/mlx_destroy_display.c
        minilibx/mlx_destroy_image.c
        minilibx/mlx_destroy_window.c
        minilibx/mlx_expose_hook.c
        minilibx/mlx_ext_randr.c
        minilibx/mlx_flush_event.c
        minilibx/mlx_get_color_value.c
        minilibx/mlx_get_data_addr.c
        minilibx/mlx_hook.c
        minilibx/mlx_init.c
        minilibx/mlx_int.h
        minilibx/mlx_int_anti_resize_win.c
        minilibx/mlx_int_do_nothing.c
        minilibx/mlx_int_get_visual.c
        minilibx/mlx_int_param_event.c
        minilibx/mlx_int_set_win_event_mask.c
        minilibx/mlx_int_str_to_wordtab.c
        minilibx/mlx_int_wait_first_expose.c
        minilibx/mlx_key_hook.c
        minilibx/mlx_lib_xpm.c
        minilibx/mlx_loop.c
        minilibx/mlx_loop_hook.c
        minilibx/mlx_mouse.c
        minilibx/mlx_mouse_hook.c
        minilibx/mlx_new_image.c
        minilibx/mlx_new_window.c
        minilibx/mlx_pixel_put.c
        minilibx/mlx_put_image_to_window.c
        minilibx/mlx_rgb.c
        minilibx/mlx_screen_size.c
        minilibx/mlx_set_font.c
        minilibx/mlx_string_put.c
        minilibx/mlx_xpm.c cub3D_bonus/src/client/display/draw/hud/draw_crosshair.c cub3D_bonus/src/utils/mutex_init.c cub3D_bonus/src/client/player/player_shoot_utils.c cub3D_bonus/src/server/thread/routines/connection_routine/file_content_send.c cub3D_bonus/src/server/thread/routines/connection_routine/map_send_error.c cub3D_bonus/src/server/socket/check_server_error.c cub3D_bonus/src/client/mlx_handler/initialization/error_sprite_init.c cub3D_bonus/src/client/mlx_handler/hook/mouse_hook.c)
